src/test/ui/feature-gates/issue-43106-gating-of-bench.stderr
error: cannot determine resolution for the attribute macro `bench`
  --> $DIR/issue-43106-gating-of-bench.rs:7:4
   |
LL | #![bench                   = "4100"]
   |    ^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to previous error

